--- a/src/components/unicorner.css
+++ b/src/components/unicorner.css
@@ -27,4 +27,9 @@
     font-size: 0.9em; /* Just an example size */
 }
 
+.unicorner-container > a > .fyncom-logo {
+  margin: 0;
+  max-width: 80px;
+}
+
 
