--- a/src/components/about.css
+++ b/src/components/about.css
@@ -50,16 +50,11 @@
 .story-section {
     display: flex;
     justify-content: space-between;
-    /*margin: 40px 0;*/
     align-items: center; /* To vertically center items */
 }
 .story-text > h3 {
     text-align: center;
     position: relative; /* Makes sure the pseudo-element positions itself relative to the h3 */
-}
-.story-text {
-    /* This causes the bar to mov eoff page on large pages*/
-    /*width: 55%; !* Adjust as needed to control spacing *!*/
 }
 
 .story-section .story-text h3::after {
@@ -74,7 +69,55 @@
 .story-image img {
     max-width: 400px;
     display: block;
-    /*margin-right: 10px;*/
-    margin-left: 40px;
 }
 
+.p2-blue {
+    color: var(--fyncom-blue);
+}
+
+
+/** Responsive layout adjustments *!*/
+@media (max-width: 768px) {
+  /* Section adjustments for better mobile view */
+  .mission-section, .story-section, .values-section {
+    padding: 0.1rem;
+    margin: 0px 10px;
+    text-align: center; /* Optional: Center text if it fits your design */
+  }
+
+  /* Hide or alter elements not ideal for mobile if necessary */
+  /* Example: */
+  .some-element {
+    display: none; /* Hide an element not needed on mobile */
+  }
+
+  .story-section {
+    flex-direction: column; /* Stack image and text vertically */
+    align-items: center; /* Center align the flex items */
+    margin: 15px; /* Adjust margin for mobile */
+    padding: 0; /* Reset padding */
+  }
+
+  .story-section .story-image,
+  .story-section .story-text {
+    width: 100%; /* Full width for mobile */
+    margin-bottom: 20px; /* Add some spacing between the image and text */
+  }
+
+  .story-section .story-image img {
+    max-width: 100%; /* Full width on mobile */
+    height: auto; /* Maintain aspect ratio */
+    margin: 0 auto 20px; /* Center image and add margin at the bottom */
+  }
+  .story-section .story-text {
+    text-align: justify; /* Optional: for better readability */
+    padding: 0 15px; /* Add padding on the sides */
+  }
+  .story-section .story-text h3::after {
+    left: 0; /* Align pseudo-element to the left */
+    right: 0; /* Align pseudo-element to the right */
+    bottom: -8px;
+    width: 50px; /* Set a fixed width for the underline */
+    margin: 0 auto; /* Center the underline */
+  }
+}
