--- a/src/components/sales-and-marketing-use-cases.css
+++ b/src/components/sales-and-marketing-use-cases.css
@@ -40,8 +40,14 @@
     padding: 40px;
 }
 .use-case {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background: var(--container-color);
     border-radius: 20px;
+    width: 100%;
+    margin: 0.3rem;
     max-width: 500px;
     min-width: 300px;
     padding: 20px;
@@ -100,7 +106,7 @@
         align-items: center;
     }
     .hero-content {
-        max-width: 90%; /* Adjust the width for smaller screens */
-        margin: 20px 0; /* Add some margin between the image and content */
+        max-width: 90%;
+        margin: 20px 0;
     }
 }
