--- a/src/components/blocked-email.css
+++ b/src/components/blocked-email.css
@@ -1,3 +1,5 @@
+
+
 .modal-content h2 {
     color: var(--fyncom-red);
     text-align: center;
@@ -15,13 +17,13 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: var(--fyncom-blue); /* Fallback color */
-    background-color: rgba(var(--fyncom-blue-rgb), 0.7); /* RGBA with opacity */
+    background-color: var(--fyncom-blue);
+    background-color: rgba(var(--fyncom-blue-rgb), 0.7);
     text-align: center;
 }
 .modal-content {
     background-color: var(--color-background);
-    margin: 5% auto; /* Adjusted margin for better vertical alignment */
+    margin: 5% auto;
     padding: 20px;
     border: 1px solid var(--color-bar);
     max-height: 80vh; /* Prevents the modal from being too tall */
@@ -47,18 +49,18 @@
 .qr-code-container {
     text-align: center;
     max-width: 800px;
-    /* Add the following for vertical centering in the container */
+
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%; /* Ensure the container takes up available space */
+    height: 100%;
 }
 
 .qr-code-container img {
-    width: 80%; /* Responsive width */
-    max-height: 70vh; /* Adjust as necessary to keep within modal */
-    margin: auto; /* Center the image in the available space */
-    object-fit: contain; /* This will make sure the image is scaled properly within the constraints */
+    width: 80%;
+    max-height: 70vh;
+    margin: auto;
+    object-fit: contain;
 }
 
 .content-container sub {
