Fixing contact form on contact page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -33,6 +33,7 @@
     --fyncom-light-blue: #13DCEC;
   --fyncom-lightest-blue: #80DED9;
   --fyncom-red: #FF5A5F;
+    --fyncom-red-rgb: 255, 90, 95;
   --fyncom-cyan: #408A97;
   --fyncom-dark-cyan: #206076;
   --fyncom-darkest-cyan: #003554;
