--- a/src/components/blocked-email.css
+++ b/src/components/blocked-email.css
@@ -1,5 +1,3 @@
-
-
 .modal-content h2 {
     color: var(--fyncom-red);
     text-align: center;
@@ -66,4 +64,7 @@
 .content-container sub {
     text-align: center;
     max-width: 70%;
+}
+.html-dynamic {
+    text-align: center;
 }
