--- a/src/components/about.css
+++ b/src/components/about.css
@@ -14,7 +14,6 @@
     font-size: 16pt;
 }
 
-
 /* Values Section */
 .values-section {
     padding-left: 40px;
@@ -82,28 +81,18 @@
   .mission-section, .story-section, .values-section {
     padding: 0.1rem;
     margin: 0px 10px;
-    text-align: center; /* Optional: Center text if it fits your design */
+    text-align: center;
   }
-
-  /* Hide or alter elements not ideal for mobile if necessary */
-  /* Example: */
-  .some-element {
-    display: none; /* Hide an element not needed on mobile */
-  }
-
   .story-section {
-    flex-direction: column; /* Stack image and text vertically */
-    align-items: center; /* Center align the flex items */
+    flex-direction: column;
+    align-items: center;
     margin: 15px; /* Adjust margin for mobile */
     padding: 0; /* Reset padding */
   }
-
-  .story-section .story-image,
-  .story-section .story-text {
+  .story-section .story-image, .story-section .story-text {
     width: 100%; /* Full width for mobile */
     margin-bottom: 20px; /* Add some spacing between the image and text */
   }
-
   .story-section .story-image img {
     max-width: 100%; /* Full width on mobile */
     height: auto; /* Maintain aspect ratio */
