--- a/src/components/index.css
+++ b/src/components/index.css
@@ -120,7 +120,7 @@
   color: var(--fyncom-red);
   padding: 0px;
 }
-.text-wrapper-3 {
+.underline {
   text-decoration: underline;
 }
 .text-wrapper-2 {
