--- a/src/components/emailFiltersAndRewards.css
+++ b/src/components/emailFiltersAndRewards.css
@@ -54,6 +54,21 @@
     position: relative;
     max-width: 560px;
 }
+/*.google-docs-iframe-container {*/
+/*    display: block;*/
+/*    width: 100%;*/
+/*    height: auto;*/
+/*    padding-bottom: 56.25%; !* Aspect ratio of 16:9 *!*/
+/*    position: relative;*/
+/*}*/
+
+/*.google-docs-iframe-container {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
 
 @media (max-width: 768px) {
     .setup-section .setup-instructions h2::after,
