--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@
   --color-text: #333;
   --color-primary: #7026b9;
   --color-link: #007bff;
+  --color-link-custom: var(--color-link);
   --color-code-bg: #fff4db;
   --color-code: #8a6534;
   --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
@@ -90,6 +91,7 @@
       --mobile-menu-text-color: white;
       --mobile-menu-bg-color: var(--fyncom-darkest-cyan);
         --color-text: #eaeaea;
+        --color-link-custom: var(--color-link-custom);
         --color-background: #121212;
         --color-primary: #bb86fc;
         --sub-color: var(--fyncom-light-blue);
