--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -70,10 +70,12 @@
         max-width: 300px;
     }
     .fyncom-logo-header {
-        content: var(--logo-light-mode);
         display: block;
         margin: 0px 10px;
         max-width: 100px;
+        height: auto; /* Set an appropriate height or keep it auto if the aspect ratio is correct */
+        background-size: contain;
+        background-repeat: no-repeat;
     }
     .fyncom-filters-words {
         content: var(--filters-light-mode);
@@ -113,12 +115,6 @@
             margin: 40px auto;
             max-width: 300px;
         }
-        .fyncom-logo-header {
-            content: var(--logo-dark-mode);
-            display: block;
-            margin: 0px 10px;
-            max-width: 100px;
-        }
         .fyncom-filters-words {
             content: var(--filters-dark-mode);
         }
@@ -154,12 +150,6 @@
         display: block;
         margin: 40px auto;
         max-width: 300px;
-    }
-    .fyncom-logo-header {
-        content: var(--logo-dark-mode);
-        display: block;
-        margin: 0px 10px;
-        max-width: 100px;
     }
     .fyncom-filters-words {
         content: var(--filters-dark-mode);
