--- a/src/components/index.css
+++ b/src/components/index.css
@@ -29,9 +29,7 @@
   gap: 1rem;
 }
 .top-logos-left {
-  display: inline-block; /* Ensures the link is a block-level element */
   display: flex;
-  /*flex-shrink: 0;  !* Prevents the link container from shrinking *!*/
 }
 
 .bottom-logo {
@@ -57,15 +55,10 @@
   max-width: 50%;
   min-width: 200px;
 }
-.index-logo-use-cases {
-  max-width: 80%;
-  min-width: 300px;
-}
 .index-logo:hover,
 .index-logo-tg:hover,
 .index-logo-discord:hover,
-.gatsby-image-wrapper:hover,
-.index-logo-use-cases:hover {
+.gatsby-image-wrapper:hover {
   transform: scale(1.15);
   transition: transform 0.3s;
 }
@@ -109,7 +102,7 @@
 /* bits and pieces*/
 .AppText .span, .AppText .span a, .text-wrapper-3-red {
   color: var(--fyncom-red);
-  padding: 0px;
+  padding: 0;
 }
 .underline {
   text-decoration: underline;
@@ -157,7 +150,7 @@
     width: 100%;        /* Take the full width of the container on small screens */
     justify-content: space-evenly; /* Evenly space logos horizontally on small screens */
     min-width: 10px;
-    gap: 0rem;
+    gap: 0;
   }
   .index-logo, .index-logo-tg, .index-logo-discord {
     width: 100%; /* Increase width to fit mobile screens, adjust as needed */
@@ -173,10 +166,6 @@
   .index-logo-discord {
     max-width: 35%;
     min-width: 100px;
-  }
-  .index-logo-use-cases {
-    max-width: 60%;
-    min-width: 120px;
   }
 
   .text-block, .text-block-left {
