--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,50 +3,34 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0;
+  padding: 1rem 0;
   background-color: #605E5E; /* Choose your preferred color */
   color: #FFF; /* Choose your preferred color */
 }
-
 .footer-header {
+    margin: 1rem;
     display: flex;
-    justify-content: center;
-    align-items: center; /* Vertically center-align children */
-    padding: 10px 10px 10px 10px;
+    padding: 0 0 0 4rem;
 }
 .footer-header p {
     flex: 1; /* Allow the text to take up remaining space */
     text-align: center; /* Align text to the right */
 }
-.footer-header > a > img {
-    width: 80px;
-    height: auto;
-    /*margin-left: 0;*/
-    /*margin-right: 20px;*/
-}
-
 .info-container {
     display: flex;
-    /*align-items: center; !* Vertically align the logo and text *!*/
-    gap: 1rem;
-    justify-content: center;
-    margin: 0;
+    flex-direction: row;
+    margin: 12px 0; /* Reduce margin top and bottom */
 }
 .info-container p {
     font-size: 14px;
-    margin: 0px 0; /* Reduce margin top and bottom */
+    margin: 0 0; /* Reduce margin top and bottom */
 }
 
 .footer-socials {
   display: flex;
   gap: 15px;
 }
-.footer-socials img {
-  width: 24px;
-  height: 24px;
-}
 .footer-socials a {
-  font-size: 24px;
   color: #FFF;
   text-decoration: none;
 }
@@ -54,12 +38,10 @@ footer {
 .footer-links-container {
   display: flex;
   justify-content: center;
-  gap: 3rem; /* Adjust the gap between the two link lists */
+    padding: 10px 10px 10px 10px;
 }
 .footer-links {
   list-style-type: none;
-  padding: 10px 10px 10px 10px;
-  /*margin: 0;*/
 }
 .footer-links li {
   margin-bottom: 0.5rem; /* Spacing between links */
@@ -72,28 +54,17 @@ footer {
   text-decoration: underline;
 }
 
-
 /* Media Query for mobile devices */
 @media (max-width: 768px) {
-  .footer-header, .footer-links-container, .footer-socials {
-    flex-direction: column;
-  }
-
-  .footer-header > a > img {
-    margin: 0 auto; /* Center the logo horizontally */
-  }
-
-  .info-container, .footer-socials, .footer-links {
-    width: 100%; /* Make each section take full width */
+    .footer-socials {
+        flex-direction: row;
+        gap: 0;
+    }
+  .info-container, .footer-links {
+    /*width: 100%; !* Make each section take full width *!*/
     text-align: center; /* Center align the text for all */
   }
-
-  .footer-links-container {
-    gap: 1rem; /* Reduce gap size for mobile */
-  }
-
-  /* Adjust font sizes if necessary */
-  .info-container p {
-    font-size: 12px; /* Reduce font size for mobile */
-  }
+    .footer-header{
+        margin-bottom: 0;
+    }
 }
