--- a/src/components/sales-and-marketing-use-cases.css
+++ b/src/components/sales-and-marketing-use-cases.css
@@ -1,13 +1,8 @@
-.sales-use-cases {
+.sales-use-cases, .marketing-use-cases {
     max-width: 1400px; /* Sets the maximum width of the page */
     margin: 0 auto; /* Centers the page */
     overflow: hidden; /* Prevents child elements from overflowing */
     padding: 0 20px; /* Optional: if you want some space on the sides */
-}
-.story-image {
-    min-width: 300px;
-    max-width: 600px;
-    max-height: 800px;
 }
 .hero-section {
     text-align: center;
@@ -23,8 +18,7 @@
 .hero-content {
     /*max-width: 500px; !* Adjust the width as needed *!*/
     background: var(--fyncom-blue);
-    margin-left: auto;
-    padding: 20px;
+    padding: 15px;
     flex: 1  1 auto;
     max-width: 1000px;
 }
@@ -59,10 +53,9 @@
     background: var(--container-color);
     border-radius: 20px;
     width: 100%;
-    margin: 0.3rem;
     max-width: 500px;
-    min-width: 300px;
-    padding: 20px;
+    min-width: 250px;
+    padding: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 .background-stripe {
@@ -114,7 +107,6 @@
     .logos-container {
         display: flex;
         flex-wrap: wrap;
-        /*gap: unset;*/
         gap: 10px;
     }
     .logo {
