--- a/src/components/markdown.css
+++ b/src/components/markdown.css
@@ -2,17 +2,12 @@
     margin: 0 auto;
     width: 80%;
     max-width: 1200px;
-    /*padding: 0px 0;*/
 }
 img {
     margin-left: unset;
     margin-bottom: 3rem;
-    /*display: block;*/
-    /*width: 100%; !* make image width responsive *!*/
-    /*height: auto; !* maintain aspect ratio *!*/
-    /*object-fit: cover; !* adjust how the image fits in its container *!*/
 }
-p {
+.gatsby-focus-wrapper p {
     max-width: unset;
 }
 .float-left {
