--- a/src/components/markdown.css
+++ b/src/components/markdown.css
@@ -14,7 +14,6 @@ img {
     float: left;
     max-width: 200px;
     margin-right: 1rem;
-    /*justify-content: space-between;*/
 }
 .float-left.large {
     max-width: 400px;
@@ -22,6 +21,15 @@ img {
 a {
     color: var(--fyncom-light-blue);
 }
-/*.use-case-image.blog {*/
-    /*max-width: 100px;*/
-/*}*/
+.button-container {
+    display: flex;
+    justify-content: center; /* This will center the button horizontally */
+    align-items: center; /* This will center the button vertically */
+    /* Add other styles such as padding or margins if needed */
+}
+
+@media (max-width: 768px) {
+    .gatsby-focus-wrapper {
+        width: 95%;
+    }
+}
